# luria-delbruck-fluctuation-gaia

./: .gitignore  ANALYSIS.md  README.md  REVIEW.html  pyproject.toml
.gaia/: compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
docs/: detailed-reasoning.md
src/luria_delbruck_fluctuation/: __init__.py  discussion.py  exp_fluctuation.py  exp_plating.py  motivation.py  mutation_rate.py  priors.py  theory.py
src/luria_delbruck_fluctuation/reviews/: self_review.py
